# rag-pipeline

./: LICENSE  README.md  pyproject.toml  requirements.txt
0-DataIngestParsing/: dataingestion-pdf.ipynb  dataingestion.ipynb  dataingestionCsvExcel.ipynb  dataingestionDoc.ipynb  dataingestionJSON.ipynb  dataingestionSQL.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/text_files/: python_intro.txt
1-VectorEmbeddings/: embedding.ipynb  openai-embeddings.ipynb
2-Vector_store/: chromaDB.ipynb  faiss.ipynb  otherVectorStore.ipynb  pinecone.ipynb
3-AdvancedChunking/: semantic_chunking.ipynb
4-HybridRetrieval/: combining_dense_sparse.ipynb  mmr_implementation.ipynb  re-ranking.ipynb
DataIngestParsing/: dataingestion.ipynb
DataIngestParsing/data/text_files/: intro_to_rag.txt
