[project]
name = "rag"
version = "0.1.0"
description = "A step-by-step RAG learning project covering data parsing, ingestion, embeddings, vector databases, and querying."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.31",
    "langchain-pinecone>=0.2.11",
    "matplotlib>=3.10.5",
    "msoffcrypto-tool>=5.4.2",
    "openpyxl>=3.1.5",
    "panda>=0.3.1",
    "pandas>=2.3.2",
    "pinecone>=7.3.0",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
    "python-docs>=0.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "unstructured[docx]>=0.18.13",
    "wikipedia>=1.4.0",
]
